imp/themes/screen-dimp.css
/* ... */
/* Headers styles. */
.msgHeaders {
    background: transparent url("graphics/backhead_r.png") repeat-x;
    border-bottom: 1px #b9b9b3 solid;
    padding: 2px 0 1px;
    font-size: 90%;
    overflow: hidden;
}
.msgfullread .msgHeaders {
    cursor: default;
}

.msgHeaders .dimpOptions {
    padding: 3px 10px 5px 5px;
}

.msgHeaders table {
    margin-top: -2px;
}
.msgHeaders table thead td {
    padding: 0 0 1px 0;
}
.msgHeaders table thead tr {
    vertical-align: top;
}
.msgHeaders table thead td.label {
    font-weight: bold;
    padding-right: 4px;
    text-align: right;
    white-space: nowrap;
}
.msgfullread .msgHeaders table thead td.label {
    padding-left: 3px;
}
.msgHeaders table thead td.subject {
    font-weight: bold;
}

#msgAtc td {
    padding-bottom: 0;
    padding-top: 1px;
}
.atcLabel, .msgLogLabel {
    font-weight: bold;
}
.atcLabel {
    padding-right: 5px;
}

#partlist table {
    margin-top: 3px;
}
#partlist td {
    padding-bottom: 2px;
    padding-right: 3px;
}

#partlist_toggle span.attachmentImg {
    margin-right: 0;
}

#msgloglist {
    padding-top: 4px;
}
#msgloglist ul {
    list-style-type: none;
}

#msgloglist_toggle, #partlist_toggle {
    cursor: pointer;
}

#msgHeadersContent {
    overflow: hidden;
}

/* ini msg small header */
#toggleHeaders {
    float: left;
}
#msgHeadersColl {
    margin: 0 6px;
    white-space: nowrap;
}
#msgHeadersColl span.date {
    float: right;
    text-align: right;
}
#msgHeadersColl span.subject {
    float: left;
    font-weight: bold;
    max-width: 50%;
    overflow: hidden;
    padding-left: 2px;
    text-overflow: ellipsis;
    -o-text-overflow: ellipsis;
}
#msgHeadersColl span.fromcontainer {
    padding-left: 5px;
}
#msgHeadersColl span.from {
    max-width: 40%;
    overflow: hidden;
    text-overflow: ellipsis;
    -o-text-overflow: ellipsis;
}
/* end msg small header */

/* Message body formatting. */
.messageBody {
    background: #fff url("graphics/backhead_shadow.png") top repeat-x;
    border: 0;
    padding: 7px 5px 5px;
}
.msgfullread div.messageBody {
    overflow: auto;
}

#messageBodyCover {
    position: absolute;
    z-index: 1000;
}

/* Message Composition. */
.composeAddrbook {
    color: blue;
    cursor: pointer;
    text-decoration: underline;
}
.composeAddrbook:hover {
    font-weight: bold;
}

.msgwrite {
    background: #e2e2e2 url("graphics/backhead_r.png") repeat-x;
    border: 1px #b9b9b3 solid;
    cursor: default;
    padding: 2px 0;
}
.msgwrite .dimpOptions {
    padding: 8px 8px 0 0;
    font-size: 90%;
}
.msgwrite .dimpOptions div {
    padding-bottom: 0;
}
.msgwrite .dimpOptions label {
    cursor: pointer;
}
.msgwrite tr {
    vertical-align: top;
}
.msgwrite td {
    font-size: 90%;
}
.msgwrite td.label {
    white-space: nowrap;
    text-align: right;
    padding: 4px 4px 0 4px;
}
.msgwrite span.loadingImg {
    display: block;
}

#composeMessageParent {
    background: #fff url("graphics/backhead_shadow.png") top repeat-x;
    border-left: 1px silver solid;
    border-right: 1px silver solid;
    border-bottom: 1px silver solid;
    padding: 10px 5px 5px;
}
#composeMessage {
    border: none;
    margin: 0;
    padding: 0;
    width: 100%;
}

#rteloading {
    position: absolute;
    z-index: 100;
    background-color: #000;
    filter: alpha(opacity=50);
    -moz-opacity: .5;
    opacity: .5;
}
#rteloadingtxt {
    position: absolute;
    background-color: #fff;
    z-index: 101;
}

/* Attachment file list */
#attach_list {
    padding-left: 15px;
}
#attach_list li {
    padding-top: 5px;
}
#attach_list span.remove {
    border: 1px solid #ccc;
    font-weight: bold;
    padding: 1px;
}
#attach_list span.attachName, #attach_list span.remove:hover {
    cursor: pointer;
    text-decoration: underline;
}
#attach_list span.attachName {
    color: blue;
}
#attach_list span.attachName:hover, #attach_list span.remove:hover {
    color: red;
}

#upload_wait {
    display: -moz-inline-stack;
    display: inline-block;
    font-weight: bold;
    padding-top: 2px;
}

span.attachmentImg {
    background-image: url("graphics/attachment.png");
}

/* Context Menus */
.context {
    min-width: 180px;
    position: absolute;
    top: 0;
    left: 0;
    z-index: 10000;
    border: 1px #d4d4d4 solid;
    padding: 1px;
    background: #f4f4f4;
    color: #000;
    font-size: 90%;
}
.context a, .context a:visited {
    white-space: nowrap;
    display: block;
    padding: 4px 4px 3px 2px;
    text-decoration: none;
    color: #000;
}
.context a:hover, .context a.contextSubmenu.contextHover {
    background: gray;
    color: #fff;
    cursor: pointer;
    text-decoration: none;
}
.context div.sep {
    background: silver;
    height: 1px !important;
    margin: 1px 0;
    padding: 0;
}
.context div.contactAddr {
    font-style: italic;
    text-align: center;
}
.contextSubmenu {
    background: url("graphics/popright.png") 100% 50% no-repeat;
    padding-left: 16px;
}
.contextSelected {
    background: #ffa;
}

/* Email Addresses. */
a.address {
    cursor: pointer;
    padding: 2px;
    position: static;
    text-decoration: underline;
    white-space: nowrap;
}
a.address img {
    display: none;
    vertical-align: top;
}
a.address:hover {
    background: #fff;
    border: 1px silver solid;
    padding: 1px;
    text-decoration: none;
}
a.address:hover img {
    display: inline;
    padding-left: 4px;
}

/* Drag and drop styles. */
.drag, .dragdrop, .folderdrag, .msgdrag {
    background: #eee;
    border: 1px solid #ccc;
    font-size: 12px;
    overflow: hidden;
    z-index: 999;
}
.dragdrop {
    color: red;
}
.dragdrop, .folderdrag, .msgdrag {
    padding: 2px;
}

/* Search-related styles */
#qsearch {
    background-color: #f3f3f3;
    border: 1px solid #999;
    cursor: default;
    float: right;
    margin-top: -2px;
    padding-left: 1px;
    padding-right: 1px;
    -moz-border-radius: 4px;
    -webkit-border-radius: 4px;
}
#qsearch form {
    display: inline;
}
/* ... */

